output.txt
   Compiling escrow-multisig v0.1.0 (/home/edohwares/Desktop/Room/drips/AnchorPoint/src/escrow_multisig)
warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/escrow_multisig/test.rs:20:25
   |
20 |     let contract_id = e.register_contract(None, EscrowMultisig);
   |                         ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `soroban_sdk::Env::register_stellar_asset_contract`: use [Env::register_stellar_asset_contract_v2]
  --> src/escrow_multisig/test.rs:32:22
   |
32 |     let token_id = e.register_stellar_asset_contract(admin.clone());
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `mint` found for struct `Client<'a>` in the current scope
  --> src/escrow_multisig/test.rs:37:18
   |
37 |     token_client.mint(&contract_id, &deposit_amount);
   |                  ^^^^ method not found in `Client<'_>`

error[E0308]: mismatched types
   --> src/escrow_multisig/test.rs:61:34
    |
 61 |                 sub_invocations: Vec::new(&e),
    |                                  ^^^^^^^^^^^^ expected `Vec<AuthorizedInvocation>`, found `Vec<_>`
    |
    = note: `soroban_sdk::Vec<_>` and `Vec<AuthorizedInvocation>` have similar names, but are actually distinct types
note: `soroban_sdk::Vec<_>` is defined in crate `soroban_sdk`
   --> /home/edohwares/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-22.0.11/src/vec.rs:88:1
    |
 88 | pub struct Vec<T> {
    | ^^^^^^^^^^^^^^^^^
note: `Vec<AuthorizedInvocation>` is defined in crate `alloc`
   --> /home/edohwares/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/vec/mod.rs:434:1
    |
434 | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
  --> src/escrow_multisig/test.rs:85:25
   |
85 |     let contract_id = e.register_contract(None, EscrowMultisig);
   |                         ^^^^^^^^^^^^^^^^^

warning: use of deprecated method `soroban_sdk::Env::register_contract`: use `register`
   --> src/escrow_multisig/test.rs:108:25
    |
108 |     let contract_id = e.register_contract(None, EscrowMultisig);
    |                         ^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `escrow-multisig` (lib test) generated 4 warnings
error: could not compile `escrow-multisig` (lib test) due to 2 previous errors; 4 warnings emitted
